--- a/account_payment_batch_process/views/account_payment.xml
+++ b/account_payment_batch_process/views/account_payment.xml
@@ -2,8 +2,8 @@
 <odoo>
 
     <!-- Payment Tree View -->
-    <record id="view_account_supplier_payment_tree_nocreate" model="ir.ui.view">
-        <field name="name">account.supplier.payment.tree.nocreate</field>
+    <record id="view_account_payment_tree_nocreate" model="ir.ui.view">
+        <field name="name">account.payment.tree.nocreate</field>
         <field name="model">account.payment</field>
         <field name="arch" type="xml">
             <tree
