[MIG][13.0] make compatible with v13

--- a/account_payment_batch_process/views/account_payment.xml
+++ b/account_payment_batch_process/views/account_payment.xml
@@ -12,7 +12,7 @@
                 edit="false"
                 create="false"
             >
-                <field name="date" />
+                <!-- <field name="date" /> -->
                 <field name="name" />
                 <field name="journal_id" />
                 <field name="payment_method_id" />
